@@ -20,3 +20,4 @@
 /cmake_install.cmake
 /install_manifest.txt
 /sir
+/sir.cbp
