@@ -1,5 +1,4 @@
 *** nearest release ***
-  ! Load translations from file, not resources
 
 *** next release ***
   ! substitution color for transparency
