@@ -1,6 +1,5 @@
 To install a new language:
 
 - Add the line in the translation_info.txt file: qm_file,Language_Name,flag_image
-- Add the files in application.qrc (Both language (qm) and flag)
-- Add the ts file in sir.pro
-- Run lrelase sir.pro
+- Add the ts file to sir_TRANSLATIONS variable in CMakeLists.txt
+- Run lupdate ../src/ ../dialogs/ -ts sir_[lang].ts
