@@ -18,6 +18,7 @@
     - new options group box "File list" and header view context menu for TreeWidget settings
     - converting from SVG bug when dest size is more than default size fixed
     - keep aspect ratio added to settings
+    - Polish translation updated
 
 * Tue Jul 31 2012 - Marek Jędryka <jedryka89@gmail.com> - v2.4
     - Changelog file provided
